fixes the text-align for nav

--- a/app/ContentTypes/_toolbar.scss
+++ b/app/ContentTypes/_toolbar.scss
@@ -175,10 +175,6 @@
   .toolbar-background > .container {
       width: 100%;
   }
-  .navbar .navbar-collapse {
-      text-align: center;
-  }
-
 }
 @media only screen and (min-width:1200px) {
     .navbar-collapse {
