--- a/main2016.css
+++ b/main2016.css
@@ -1720,9 +1720,6 @@ h3 {
   .toolbar-background > .container {
     width: 100%;
   }
-  .navbar .navbar-collapse {
-    text-align: center;
-  }
 }
 
 @media only screen and (min-width: 1200px) {
